# PharmaOCR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/routes/: extract.py
app/schemas/: response_schema.py
app/services/: __init__.py  ocr_service.py  parser_service.py  preprocess_service.py
app/static/: index.html
app/utils/: image.py
tests/: test_parser_service.py
