[project]
name = "pharma-ocr-api"
version = "0.1.0"
description = "FastAPI MVP backend for pharmaceutical package OCR extraction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "opencv-python-headless>=4.9.0,<5.0.0",
    "pillow>=10.0.0,<12.0.0",
    # Standard PaddleOCR inference stack: general OCR only, no doc-parser/IE/VL extras.
    "paddlepaddle>=3.0.0,<4.0.0",
    "paddleocr>=3.0.0,<4.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
paddlepaddle = { index = "paddlepaddle-cpu" }

[[tool.uv.index]]
name = "paddlepaddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true
